# headhunteraapp

./: .env.example  .gitignore  README.md  docker-compose.yml
.cursor/: hooks.json  mcp.json  mcp.secrets.env.example  ruflo.env.example
backend/: .env.example  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_job_applications.py  002_workforce_marketplace.py  003_enterprise_foundation.py  004_work_object_cover_image.py  005_profile_avatars.py
backend/app/: __init__.py  config.py  db.py  deps.py  enums.py  main.py  security.py
backend/app/api/v1/: admin_api.py  analytics.py  applications.py  auth.py  chat.py  enterprise_billing.py  integrations_api.py  notifications_api.py  object_responses.py  organizations.py  profiles.py  reviews.py  router.py  shortlist.py  talent.py  uploads.py  work_objects.py
backend/app/models/: __init__.py  brigade_profile.py  company_profile.py  conversation.py  enterprise.py  job_application.py  message.py  object_response.py  review.py  user.py  work_object.py  worker_profile.py
backend/app/schemas/: __init__.py  auth.py  chat.py  job_application.py  notifications.py  object_responses.py  profiles.py  reviews.py  work_objects.py
backend/app/services/: audit_log.py  billing.py  conversation_list.py  image_upload.py  notifications.py  profiles.py  rating.py  work_object_read.py
backend/tests/: conftest.py  test_health.py  test_integration_api.py  test_security.py
docs/: ARCHITECTURE.md  DOMAIN_MODEL.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  (+1 more)
(+125 files in other folders)
