[project]
name = "headhunteraapp-backend"
version = "0.1.0"
description = "headhunteraapp API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.10",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
